--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.3",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.330.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.3",
     "react-intersection-observer": "^9.8.0",
-    "lucide-react": "^0.330.0",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
